tests/ui/resource/unknown_method.stderr
error[E0425]: cannot find type `read_any___gotham_restful_endpoint` in this scope
 --> tests/ui/resource/unknown_method.rs:5:12
  |
5 | #[resource(read_any)]
  |            ^^^^^^^^
...
8 | #[read_all]
  | ----------- similarly named struct `read_all___gotham_restful_endpoint` defined here
  |
help: a struct with a similar name exists
  |
5 - #[resource(read_any)]
5 + #[resource(read_all___gotham_restful_endpoint)]
  |
